--- a/content/docs/plugins/index.mdx
+++ b/content/docs/plugins/index.mdx
@@ -52,6 +52,9 @@ elizaos plugins remove @elizaos/plugin-discord
 
 - [Creating Plugins](/docs/plugins/creating-plugins) - Quick start guide
 - [Plugin Development Guide](/docs/plugins/plugin-development) - Complete development reference
+- [Plugin Registry](/docs/plugins/plugin-registry) - Complete catalog of available plugins
+- [Plugin Templates](/docs/plugins/plugin-templates) - Ready-to-use templates and examples
+- [Plugin Testing](/docs/plugins/plugin-testing) - Comprehensive testing strategies
 - [Plugin Development & Linking](/docs/guides/plugin-development-linking) - Advanced development workflows
 
 ## Advanced Features
