--- a/content/docs/plugins/plugin-registry.mdx
+++ b/content/docs/plugins/plugin-registry.mdx
@@ -795,7 +795,7 @@ elizaos plugins installed
 
 Create a `.env` file for plugin configuration:
 
-```env
+```bash
 # Core Configuration
 DATABASE_URL=postgresql://user:pass@localhost/db
 
