--- a/content/docs/core/database-system.mdx
+++ b/content/docs/core/database-system.mdx
@@ -350,7 +350,7 @@ export class PluginNamespaceManager {
 ### Environment Variables
 
 #### PostgreSQL Configuration
-```env
+```bash
 # Production PostgreSQL URL
 POSTGRES_URL=postgresql://user:password@localhost:5432/eliza
 
@@ -361,7 +361,7 @@ POSTGRES_CONNECTION_TIMEOUT=5000
 ```
 
 #### PGlite Configuration
-```env
+```bash
 # PGlite data directory
 PGLITE_PATH=./.eliza/.elizadb
 DATABASE_PATH=./.eliza/.elizadb
