--- a/content/docs/learning-tracks/simple/guides/cli-reference.mdx
+++ b/content/docs/learning-tracks/simple/guides/cli-reference.mdx
@@ -172,7 +172,7 @@ elizaos agent get [options]
 **Options:**
 - `-n, --name <name>` - Agent ID, name, or index number from list (required)
 - `-j, --json` - Display agent configuration as JSON in console
-- `-o, --output [file]` - Save agent config to JSON file (defaults to {name}.json)
+- `-o, --output [file]` - Save agent config to JSON file (defaults to `{name}.json`)
 - `-r, --remote-url <url>` - URL of the remote agent runtime
 - `-p, --port <port>` - Port to listen on
 
